--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a
     margin: auto;
 }
 
-.music
+.rickroll
 {
     position: absolute;
     bottom: 0;
@@ -52,7 +52,7 @@ a
     display: none;
 }
 
-.video
+.twinkies
 {
     position: absolute;
     bottom: 0;
