changed about font

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a
 
     color: #a8a6a6;
 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: bold;
 }
 
