--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 body
 {
     background-color: #212121;
+
+    background-image: url("res/dragula.gif");
+    background-repeat: repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 a
 {
     color: #cc7bbb;
 
-    text-shadow: none;
+    /*text-shadow: none;*/
+}
+
+mark
+{
+    color: #c9c9c9;
+    background-color: #000000;
 }
 
 .welcome_text
@@ -22,7 +33,7 @@ a
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
 
-    text-shadow: 1.5px 1.5px #000000;
+    /*text-shadow: 1.5px 1.5px #000000;*/
 }
 
 .about
@@ -39,7 +50,7 @@ a
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: bold;
 
-    text-shadow: 1.5px 1.5px #000000;
+    /*text-shadow: 1.5px 1.5px #000000;*/
 }
 
 .social
