--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
     background-color: #212121;
 
-    background-image: url("res/dragula.gif");
+    background-image: url("http://207.180.212.190/dragula.gif");
     background-repeat: repeat;
     background-attachment: fixed;
     background-position: center;
